# Sonic-The-Hedgehog-2006-XBLA-DLL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
dll/: CMakeLists.txt  main.cpp
dll/Core/: Debug.h
dll/Core2/: Debug.cpp  Debug.h  DebugFont.cpp  DebugFont.h  Hook.cpp  Hook.h  NLua.h  Utility.h
dll/Patch/: Common.h
dll/Patch/Api/: FFrameSynchronizerThread.cpp  FFrameSynchronizerThread.h  FHavokRunnerThread.cpp  FHavokRunnerThread.h  FStepableThread.cpp  FStepableThread.h  FThread.cpp  FThread.h  Thread.cpp
dll/Patch/ArcFix/: ArcFix.cpp  ArcFix.h
dll/Patch/DebugUI/: DebugUI.cpp  DebugUI.h
dll/Patch/RestoreRetaiRenderFunctions/: RestoreGameimp.cpp  RestoreGameimp.h  RestoreLUAFunctions.cpp  RestoreLUAFunctions.h  RestoreMainMenuTask.cpp  RestoreMainMenuTask.h  RestoreRetaiRenderFunctions.h  RestoreSonicContext.cpp  RestoreSonicContext.h  RestoreThreading.cpp  RestoreThreading.h  oldRestoreRetaiRenderFunctions.cpp
files/common/: Core.lua
files/font_build/: config.bmfc
files/for_360_sdk/: cl.exe.manifest  force_link.xml  link.exe.manifest
files/media/: FontShader.hlsl  font_atlas.fnt  font_atlas_0.dds
files/patch/: boot.arc  cache_fixed.arc
lib/Sonic2006LIB/Chao/: Chao.vcproj  chao.cpp  chao.h
lib/Sonic2006LIB/Chao/CSD/: CBase.cpp  CBase.h  CFontCollection.cpp  CFontCollection.h  CMemoryAlloc.cpp  CMemoryAlloc.h  CNode.cpp  CNode.h  CNodeObserver.cpp  CNodeObserver.h  CObserverBase.cpp  CObserverBase.h  CPlatform.cpp  CPlatform.h  CProject.cpp  CProject.h  CReadFile.cpp  CReadFile.h  CResourceBase.cpp  CResourceBase.h  CScene.cpp  CScene.h  CSceneObserver.cpp  CSceneObserver.h  CTexList.cpp  CTexList.h  CTransform_1.cpp  CTransform_1.h  CTransform_2.cpp  CTransform_2.h  CTransform_3.cpp  CTransform_3.h  Defs.h  Node.cpp  Node.h  Project.cpp  Project.h  RCObject.cpp  RCObject.h  Scene.cpp  (+3 more)
lib/Sonic2006LIB/Chao/Debug/: BuildLog.htm
lib/Sonic2006LIB/Chao/Misc/: API_DEFS.h  Aligment.hpp  Allocation.hpp  Destruction.hpp  MapExtension.hpp  cstring.hpp  utill.hpp
lib/Sonic2006LIB/Chao/Release/: BuildLog.htm
lib/Sonic2006LIB/Lua/: LUA.sln  LUA.vcproj  LUA.vcproj_old
lib/Sonic2006LIB/Lua/Debug/: BuildLog.htm
lib/Sonic2006LIB/Lua/Release/: BuildLog.htm
lib/Sonic2006LIB/Lua/Release_LTCG/: BuildLog.htm
lib/Sonic2006LIB/Lua/src/: lauxlib.h  loadlib.c  lua.c  lua.h  lualib.h
lib/Sonic2006LIB/Marathon/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  AppMarathon.cpp  AppMarathon.h  ArcFileHandle.h  ArcFileLoader.h  ArcManager.h  AudioRoomTask.h  CMemoryAllocMarathon.cpp  CMemoryAllocMarathon.h  CPlatformMarathon.cpp  CPlatformMarathon.h  CsdLink.cpp  CsdLink.h  CsdManager.cpp  CsdManager.h  CsdObject.cpp  CsdObject.h  CsdResource.cpp  CsdResource.h  Defs.h  DocMarathonImp.cpp  DocMarathonImp.h  EventPlaybook.cpp  EventPlaybook.h  FileLoaderARC.cpp  FileLoaderARC.h  Fixture.cpp  Fixture.h  FrameSynchronizerTask.cpp  FrameSynchronizerTask.h  FrameSynchronizerThread.cpp  FrameSynchronizerThread.h  FrustumCullingTask.cpp  FrustumCullingTask.h  FrustumCullingThread.cpp  FrustumCullingThread.h  GameImp.cpp  (+68 more)
lib/Sonic2006LIB/Marathon/Combo/: AttackManager.cpp  AttackManager.h  Defs.h  ScoreManager.cpp  ScoreManager.h
lib/Sonic2006LIB/Marathon/GE1PE/: RefCountObject.cpp  RefCountObject.h
lib/Sonic2006LIB/Marathon/Mission/: Core.cpp  Core.h
lib/Sonic2006LIB/Marathon/Other/: 06BoostDestructor.hpp
lib/Sonic2006LIB/Marathon/Particles/: Particle.h  ParticleContainer.h  ParticleRef.h
lib/Sonic2006LIB/Marathon/Player/: AnimationScript.cpp  AnimationScript.h  Defs.h  Gravity.cpp  Gravity.h  HairSimulator.h  Homing.cpp  Homing.h  IDynamicLink.cpp  IDynamicLink.h  IEventer.cpp  IEventer.h  IEventerListener.cpp  IEventerListener.h  IEventerSharedWork.cpp  IEventerSharedWork.h  IExportExternalFlag.cpp  IExportExternalFlag.h  IExportPostureRequestFlag.cpp  IExportPostureRequestFlag.h  IExportWeaponRequestFlag.cpp  IExportWeaponRequestFlag.h  IFlagCommunicator.cpp  IFlagCommunicator.h  IForce.cpp  IForce.h  IImportAnimation.cpp  IImportAnimation.h  ILoad.cpp  ILoad.h  ILockOn.cpp  ILockOn.h  IModel.cpp  IModel.h  INotification.cpp  INotification.h  IPlugIn.cpp  IPlugIn.h  IPostureControl.cpp  IPostureControl.h  (+39 more)
lib/Sonic2006LIB/Marathon/Prop/: ActivationMgr.cpp  ActivationMgr.h  ActiveArea.cpp  ActiveArea.h  ActorCreator.cpp  ActorCreator.h  ActorCreators.cpp  ActorCreators.h  AllocatedData.cpp  AllocatedData.h  Class.cpp  Class.h  ClassRegistry.cpp  ClassRegistry.h  EntityHandle.cpp  EntityHandle.h  GenerateArea.cpp  GenerateArea.h  Group.h  IActorCreator.cpp  IActorCreator.h  Instance.cpp  Instance.h  Library.cpp  Library.h  Manager.cpp  Manager.h  PropClass.h  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  SceneObject.cpp  SceneObject.h
lib/Sonic2006LIB/Marathon/Sox/: ApplicationXenon.cpp  ApplicationXenon.h  ArcFile.cpp  ArcFile.h  ArcHandle.cpp  ArcHandle.h  ArcHandleMgr.cpp  ArcHandleMgr.h  Array.h  Component.cpp  Component.h  Defs.h  ErrorMSG.h  FileHandleARC.cpp  FileHandleARC.h  FileLoaderNULL.cpp  FileLoaderNULL.h  FileSystem.cpp  FileSystem.h  FileSystemARC.cpp  FileSystemARC.h  FileSystemXenon.cpp  FileSystemXenon.h  IEntityContainer.cpp  IEntityContainer.h  IFileHandle.cpp  IFileHandle.h  IFileLoader.cpp  IFileLoader.h  IResource.cpp  IResource.h  IResource2.cpp  IResource2.h  IResourceMgr.cpp  IResourceMgr.h  LinkNode.h  Message.h  MessageReceiver.cpp  MessageReceiver.h  Object.cpp  (+14 more)
lib/Sonic2006LIB/Marathon/Spanverse/: AcroartsPostLoad.cpp  AcroartsPostLoad.h  Defs.h  Env.cpp  Env.h  EnvInfo.cpp  EnvInfo.h  ISpan.cpp  ISpan.h  SpanSBMB.cpp  SpanSBMB.h  SpanSPCM.cpp  SpanSPCM.h  SpanSPMS.cpp  SpanSPMS.h  SpanSPSB.cpp  SpanSPSB.h
lib/Sonic2006LIB/Marathon/SplinePath/: Scene.cpp  Scene.h
lib/Sonic2006LIB/Marathon/Stage/: Object.cpp  Object.h
lib/Sonic2006LIB/Marathon/System/: CreateStatic.cpp  CreateStatic.h  Singleton.h
lib/Sonic2006LIB/Marathon/api/: marathonint.h
lib/Sonic2006LIB/Marathon/stdx/: RTTI.h
lib/Sonic2006LIB/zlib/win32/: zlib1.rc
patches/: DbgBreakPointToXLoadImageA.s  entry_branch.s  load_dll.s  r3_0.s
(+250 files in other folders)
